# curso_ia_nlp

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  myst.yml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: deploy.yml
_static/: custom.css
data/: fake_news_corpus_spanish.csv  podcasts_ner_es.csv
doc/: deep_learning.md  general.md  machine_learning.md  natural_language_processing.md
doc/stylesheets/: extra.css
docs/: stylesheets
lessons/01_introduccion_que_es_ml/: prediccion_california_house_prizing.ipynb
lessons/02_introduccion_tipos_ml/: clasificacion_penguin_species.ipynb  introduccion_tipos_ml.ipynb
lessons/04_nlp_ml_representacion_numerica/: buscador_tfidf.ipynb
lessons/05_nlp_ml_aprendizaje_supervisado/: corrector_noise_channel.ipynb  nlp_ml_aprendizaje_supervisado.ipynb
lessons/06_nlp_ml_aprendizaje_no_supervisado/: nlp_ml_aprendizaje_no_supervisado.ipynb
lessons/07_nlp_dl_word_embeddings/: nlp_dl_word_embeddings.ipynb
lessons/08_nlp_dl_large_language_models/: nlp_df_large_language_models.ipynb  nlp_df_large_larnguage_models.ipynb
lessons/preguntas_entrevista/: deep_learning.md  general.md  machine_learning.md  natural_language_processing.md
