[project]
name = "curso-ia-nlp"
version = "0.1.0"
description = "Curso de Inteligencia Artificial aplicada al procesamiento del lenguaje natural"
requires-python = ">=3.11"

# Primary dependencies — imported directly in notebooks
dependencies = [
    # Data & visualization
    "numpy==2.4.2",
    "pandas==3.0.1",
    "matplotlib==3.10.8",
    "seaborn==0.13.2",
    "plotly==6.5.2",
    "scipy==1.17.0",

    # Machine Learning
    "scikit-learn==1.8.0",
    "sklearn-crfsuite==0.5.0",

    # NLP — classical
    "nltk==3.9.2",
    "spacy==3.8.11",
    "es_core_news_sm @ https://github.com/explosion/spacy-models/releases/download/es_core_news_sm-3.8.0/es_core_news_sm-3.8.0-py3-none-any.whl#sha256=e451a83d6df79b87e9eed0cb553f03e99e36a3bab18a7b79f0dcfd1fdf875e12",
    "gensim==4.4.0",
    "fasttext==0.9.3",
    "regex==2026.2.19",
    "tokenizers==0.22.2",

    # Graphs & networks
    "networkx==3.6.1",
    "pyvis==0.3.2",

    # Deep Learning
    "tensorflow==2.21.0",
    "keras==3.13.2",
    "keras-hub==0.19.0",

    # Transformers & LLMs
    "transformers==5.2.0",
    "datasets==4.5.0",
    "evaluate==0.4.6",

    # Utilities
    "tqdm==4.67.3",
    "requests==2.32.5",
    "tabulate==0.9.0",

    "torch",
    "peft",
    "langdetect",
    "newspaper3k",
]

[project.optional-dependencies]
# jupyter-book is a build/docs tool, not needed to run the notebooks
build = [
    "jupyter-book",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
